# C-Qt-tcp-chat

./: CMakeLists.txt  Chat.qml  CreateChat.qml  EnterChat.qml  Main.qml  MainMenu.qml  backend.cpp  backend.h  main.cpp  readme.md
